--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                         <h4 class="text-success">Ajouter une ligne de données</h4>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="create_page.html"
+                                        <a href="form.html"
                                             class="btn btn-custom btn-outline-info btn-lg" target="_blank">Continuer</a>
                                     </div>
                                 </div>
@@ -63,7 +63,7 @@
                                         <h4 class="text-dark">Caractéristique de la liste</h4>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="list_page.html"
+                                        <a href="foods.html"
                                             class="btn btn-custom btn-info btn-lg" target="_blank">Continuer</a>
                                     </div>
                                 </div>
@@ -77,7 +77,7 @@
                                         <h4 class="text-success">Caractéristique de la liste</h4>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="list_page.html"
+                                        <a href="foods.html"
                                             class="btn btn-custom btn-outline-info btn-lg" target="_blank">Continuer</a>
                                     </div>
                                 </div>
