Ajout des fichiers dataList.html et data.js

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                         <h4 class="text-success">Caractéristique de la liste</h4>
                                     </div>
                                     <div class="text-center mt-4 mb-3">
-                                        <a href="foods.html"
+                                        <a href="dataList.html"
                                             class="btn btn-custom btn-outline-info btn-lg" target="_blank">Continuer</a>
                                     </div>
                                 </div>
